--- a/style.css
+++ b/style.css
@@ -1,14 +1,11 @@
+
 body {
-  width: 700px;
-  margin: auto;
-  padding: 20px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
+  margin:0;
+  padding:0;
+  background: DarkSlateGray;
 }
 
-span {
-  font-weight: bold;
-}
-
-input {
-  width: 50px;
+#my-canvas {
+  background-color: black;
 }
